分页器完成

--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
                 <div class="panel panel-default">
-                    <div class="panel-heading">{% block blog_list_title %}博客列表（一共有{{ blog.paginator.count }}篇博客）{% endblock %}</div>
+                    <div class="panel-heading">{% block blog_list_title %}博客列表{% endblock %}</div>
                     <div class="panel-body">
                         {% for article in blogs %}
                             <div class="blog">
@@ -33,7 +33,7 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div>
+                <div class="paginator">
                    
                       <ul class="pagination">
                         <li>
@@ -41,11 +41,16 @@
                             {%else%}<span aria-hidden="true">&laquo;</span>
                             {%endif%} 
                         </li>
-                            {% for page_num in blog.paginator.page_range %}
+                            {% for page_num in page_range %}
                                 {%if page_num == blog.number %}
                                     <li class="active"><span>{{page_num}}</span></li>
                                 {%else%}
-                                 <li><a href="?page={{page_num}}">{{page_num}}</a></li>
+                                    {%if page_num == '...'%}
+                                        <li><span>{{page_num}}</span></li>
+                                    {%else%}  <li><a href="?page={{page_num}}">{{page_num}}</a></li>
+                                    {%endif%}
+                                 
+                                    
                                 {%endif%}
                                 
                             {%endfor%}    
@@ -58,7 +63,11 @@
                             {%endif%}
                         </li>
                       </ul>
-                 
+                      <p>
+                          共有{{ blog.paginator.count }}篇博客,
+                          当前第{{blog.number}}页，
+                          共{{blog.paginator.num_pages}}页
+                      </p>  
                 </div>
             </div>
             <div class="hidden-xs col-sm-4 col-md-3 col-lg-2">
