--- a/djangotest1/templates/blog/blogs_with_type.html
+++ b/djangotest1/templates/blog/blogs_with_type.html
@@ -4,6 +4,6 @@
 {% block title %}{{ blog_type.type_name }}{% endblock %}
 
 {% block blog_list_title %}
-    分类：{{ blog_type.type_name }}（一共有{{ blogs|length }}篇博客）
+    分类：{{ blog_type.type_name }}
     <a href="{% url 'article_list' %}">查看全部博客</a>
 {% endblock %}
