--- a/djangotest1/templates/blog/blogs_with_date.html
+++ b/djangotest1/templates/blog/blogs_with_date.html
@@ -1,9 +1,7 @@
-
-
 {% extends 'blog/article_list.html' %}
 {% block title %}{{ blog_type.type_name }}{% endblock %}
 
 {% block blog_list_title %}
-    分类：{{ blog_type.type_name }} 
+    日期归档：{{ blogs_with_date }} 
     <a href="{% url 'article_list' %}">查看全部博客</a>
 {% endblock %}
