--- a/djangotest1/templates/blog/article_detail.html
+++ b/djangotest1/templates/blog/article_detail.html
@@ -20,6 +20,20 @@
                     <li>发表日期：{{ article_obj.created_time|date:"Y-m-d H:n:s" }}</li>
                 </ul>
                 <div class="blog-content">{{ article_obj.content }}</div>
+                <div class="blog-more">
+                    <p>上一篇：
+                        {%if previous_blog%}
+                            <a href="{% url 'article_detail' previous_blog.pk %}}" >{{previous_blog.title}}</a>
+                        {%else%}没有了
+                        {%endif%}
+                    </p>
+                    <p>下一篇：
+                        {%if next_blog%}
+                            <a href="{% url 'article_detail' next_blog.pk %}}" >{{next_blog.title}}</a>
+                        {%else%}没有了
+                        {%endif%}
+                    </p>
+                </div>
             </div>
         </div>
     </div>
