博客数量统计

--- a/djangotest1/static/blog.css
+++ b/djangotest1/static/blog.css
@@ -17,7 +17,7 @@ div.paginator{
 }
 
 div.blog-more{
-    margin-bottom: 1em;
+    margin-top: 2em;
 }
 ul.blog-info-description {
     list-style-type: none;
