--- a/djangotest1/templates/blog/article_detail.html
+++ b/djangotest1/templates/blog/article_detail.html
@@ -19,7 +19,7 @@
                     <li>分类：<a href="{% url 'blogs_with_type' article_obj.blog_type.pk %}">{{ article_obj.blog_type }}</a></li>
                     <li>发表日期：{{ article_obj.created_time|date:"Y-m-d H:n:s" }}</li>
                 </ul>
-                <div class="blog-content">{{ article_obj.content }}</div>
+                <div class="blog-content">{{ article_obj.content|safe }}</div>
                 <div class="blog-more">
                     <p>上一篇：
                         {%if previous_blog%}
