--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -24,7 +24,7 @@
                                     <span class="glyphicon glyphicon-tag"></span><a href="{% url 'blogs_with_type' article.blog_type.pk %}">{{ article.blog_type }}</a>
                                     <span class="glyphicon glyphicon-time"></span>{{ article.created_time|date:"Y-m-d" }}
                                 </p>
-                                <p>{{ article.content|truncatechars:30 }}</p>
+                                <p>{{ article.content|striptags|truncatechars:30 }}</p>
                             </div>
                         {% empty %}
                             <div class="blog">
