--- a/djangotest1/templates/blog/article_detail.html
+++ b/djangotest1/templates/blog/article_detail.html
@@ -18,6 +18,7 @@
                     <li>作者：{{ article_obj.author }}</li>
                     <li>分类：<a href="{% url 'blogs_with_type' article_obj.blog_type.pk %}">{{ article_obj.blog_type }}</a></li>
                     <li>发表日期：{{ article_obj.created_time|date:"Y-m-d H:n:s" }}</li>
+                    <li>阅读({{article_obj.get_read_num}})</li>
                 </ul>
                 <div class="blog-content">{{ article_obj.content|safe }}</div>
                 <div class="blog-more">
