--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -22,7 +22,8 @@
                                 <h3><a href="{% url 'article_detail' article.pk %}">{{ article.title }}</a></h3>
                                 <p class="blog-info">
                                     <span class="glyphicon glyphicon-tag"></span><a href="{% url 'blogs_with_type' article.blog_type.pk %}">{{ article.blog_type }}</a>
-                                    <span class="glyphicon glyphicon-time"></span>{{ article.created_time|date:"Y-m-d" }}
+                                    <span class="glyphicon glyphicon-time"></span>{{ article.created_time|date:"Y-m-d" }}&nbsp;&nbsp;
+                                    ÔÄ¶Á({{ article.get_read_num }})
                                 </p>
                                 <p>{{ article.content|striptags|truncatechars:30 }}</p>
                             </div>
