评论登录注册form表单实现

--- a/djangotest1/templates/blog/article_detail.html
+++ b/djangotest1/templates/blog/article_detail.html
@@ -40,21 +40,39 @@
         </div>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
-                <div style="margin-top:2em;border:1px dashed;padding:2em;">
-                    提交评论区域
+                <div class="comment-area">
+                    <h3 class="comment-area-title">提交评论</h3>
                     {% if user.is_authenticated %}
-                        已登录
-                    {% else %}
-                        未登录
-                        <form action="{% url 'login' %}" method="POST">
+                        <form action="{% url 'update_comment' %}" method="POST" style="overflow:hidden">
                             {% csrf_token %}
-                            <input type="text" name="username">
-                            <input type="password" name="password">
-                            <input type="submit" value="登录">
+                            <div class="form-group">
+                                <label for="comment_text">{{ user.username }}，欢迎评论~</label>
+                                <textarea id="comment_text" class="form-control" name="text" rows="4"></textarea>    
+                            </div>
+                            
+                            <input type="hidden" name="object_id" value="{{ article_obj.pk }}">
+                            <input type="hidden" name="content_type" value="blogv1">
+                            <input type="submit" value="评论" class="btn btn-primary" style="float:right">
                         </form>
+                    {% else %}
+                        您尚未登录，登录之后方可评论~ 
+                        <a class="btn btn-primary" href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+                        <span> or </span>
+                        <a class="btn btn-danger" href="{% url 'register' %}?from={{ request.get_full_path }}">注册</a>
                     {% endif %}
                 </div>
-                <div style="margin-top:2em;border:1px dashed;padding:2em;">评论列表区域</div>
+                <div class="comment-area">
+                    <h3 class="comment-area-title">评论列表</h3>
+                    {% for comment in comments %}
+                        <div>
+                            {{ comment.user.username }}
+                            ({{ comment.comment_time|date:"Y-m-d H:n:s" }})：
+                            {{ comment.text }}
+                        </div>
+                    {% empty %}
+                        暂无评论
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
