--- a/djangotest1/templates/blog/error.html
+++ b/djangotest1/templates/blog/error.html
@@ -8,5 +8,5 @@
 {% block nav_home_active %}active{% endblock %}
 
 {% block content %}
-    {{ message }}
+    {{ message }}，<a href="{{ redirect_to }}">返回</a>
 {% endblock %}
