--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -5,6 +5,7 @@
 {% block nav_blog_active %}active{% endblock %}
 
 {% load staticfiles %}
+{% load comment_tags %}
 {% block header_extends %}
     <link rel="stylesheet" href="{% static 'blog.css' %}">
 {% endblock %}
@@ -23,7 +24,8 @@
                                 <p class="blog-info">
                                     <span class="glyphicon glyphicon-tag"></span><a href="{% url 'blogs_with_type' article.blog_type.pk %}">{{ article.blog_type }}</a>
                                     <span class="glyphicon glyphicon-time"></span>{{ article.created_time|date:"Y-m-d" }}&nbsp;&nbsp;
-                                    ÔÄ¶Á({{ article.get_read_num }})
+                                    ÔÄ¶Á({{ article.get_read_num }})&nbsp;&nbsp;
+                                    ÆÀÂÛ({% get_comment_count article %})
                                 </p>
                                 <p>{{ article.content|striptags|truncatechars:30 }}</p>
                             </div>
