数据库更换及消息中心初步

--- a/djangotest1/user/templates/user/register.html
+++ b/djangotest1/user/templates/user/register.html
@@ -3,7 +3,7 @@
 {% block title %}我的网站|注册{% endblock %}
 {% block nav_home_active %}active{% endblock %}
 {% block content %}
-    <div class="containter">
+    <div class="container">
         <div class="row">
             <div class="col-xs-4 col-xs-offset-4">
                 {% if not user.is_authenticated %}
@@ -16,12 +16,21 @@
                                 {% csrf_token %}
                                 {% for field in reg_form %}
                                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                                    {{ field }}
+                                    {% if field.id_for_label == 'id_email' %}
+                                        <div class="input-group">
+                                          {{ field }}
+                                          <span class="input-group-btn">
+                                              <button id="send_code" class="btn btn-default">发送验证码</button>
+                                          </span>
+                                        </div>
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
                                     <p class="text-danger">{{ field.errors.as_text }}</p>
                                 {% endfor %}
                                 <span class="text-danger">{{ reg_form.non_field_errors }}</span>
                                 <div class="clearfix"></div>
-                                <button id="send_code" class="btn btn-primary pull-left">发送验证码</button>
+                                
                                 <input type="submit" value="注册" class="btn btn-primary pull-right">
                             </form>
                         </div>
