--- a/djangotest1/templates/base.html
+++ b/djangotest1/templates/base.html
@@ -35,10 +35,18 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if not user.is_authenticated %}
                         <li>
-                            <a href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+                            {% if request.GET.from %}
+                                <a href="{% url 'login' %}?from={{ request.GET.from }}">登录</a>
+                            {% else %}
+                                <a href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+                            {% endif %}
                         </li>
                         <li>
-                            <a href="{% url 'register' %}?from={{ request.get_full_path }}">注册</a>
+                            {% if request.GET.from %}
+                                <a href="{% url 'register' %}?from={{ request.GET.from }}">注册</a>
+                            {% else %}
+                                <a href="{% url 'register' %}?from={{ request.get_full_path }}">注册</a>
+                            {% endif %}
                         </li>
                     {% else %}
                         <li class="dropdown">
@@ -52,6 +60,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="{% url 'user_info' %}">个人资料</a></li>
+                                <li><a href="{% url 'my_notifications' %}">我的消息</a></li>
                                 <li><a href="{% url 'change_password' %}">修改密码</a></li>
                                 {% if user.is_staff or user.is_superuser %}
                                     <li><a href="{% url 'admin:index' %}">后台管理</a></li>
