--- a/djangotest1/static/base.css
+++ b/djangotest1/static/base.css
@@ -11,3 +11,27 @@ ul{
 ul.navbar-right {
     margin-right: 0; 
 }
+
+div.footer {
+    margin-top: 3em;
+    background-color: #eee;
+    color: #555;
+}
+div.website-info {
+    text-align: center;
+    padding-top: 2em;
+    padding-bottom: 1.5em;
+}
+div.website-info p {
+    margin-bottom: 0;
+}
+
+.page-bottom{
+    position:absolute;  /*或者fixed*/
+    bottom:0;
+    width: 100%;
+}
+
+.unread-count {
+    background-color: #d9534f!important;
+}
