--- a/djangotest1/templates/blog/article_detail.html
+++ b/djangotest1/templates/blog/article_detail.html
@@ -258,6 +258,10 @@
                 }
             });
         }
-        
+        if (window.location.hash) {
+            $('html').animate({
+                scrollTop: $(window.location.hash).offset().top - 60
+            }, 500);
+        }
     </script>
 {%endblock%}
