--- a/djangotest1/static/base.css
+++ b/djangotest1/static/base.css
@@ -11,6 +11,13 @@ ul{
 ul.navbar-right {
     margin-right: 0; 
 }
+.search-form button[type="submit"] {
+    background: none;
+    border: none;
+    margin-left: -3em;
+    color: #aaa;
+}
+
 
 div.footer {
     margin-top: 3em;
