--- a/djangotest1/templates/base.html
+++ b/djangotest1/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %} 
+    {% load staticfiles %} 
 {% load notifications_tags %}
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -72,6 +72,16 @@
                             </ul>
                         </li>
                     {% endif %}
+                    <li>
+                        <form class="navbar-form search-form" action="{% url 'search' %}">
+                            <div class="form-group">
+                                <input type="text" name="wd" class="form-control" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </form>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -103,6 +113,13 @@
                     </div>
                 </form>
             </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="website-info">
+            <p>热爱技术开发的起步者所做的尝试</p>
+            <p>技术交流请联系我（468204510@qq.com）</p>
         </div>
     </div>
     <script type="text/javascript">
