--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -62,7 +62,7 @@
                         <li>
                             {%if blog.has_next%}
                                 <a href="?page={{blog.next_page_number}}" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
+                                <span aria-hidden="true">&raquo;</span></a>
                             {%else%}
                                 <span aria-hidden="true">&raquo;</span>
                             {%endif%}
@@ -74,6 +74,7 @@
                           ¹²{{blog.paginator.num_pages}}Ò³
                       </p>  
                 </div>
+              
             </div>
             <div class="hidden-xs col-sm-4 col-md-3 col-lg-2">
                 <div class="panel panel-default">
