--- a/djangotest1/templates/search.html
+++ b/djangotest1/templates/search.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-
+{% load comment_tags %}
 {% block title %}
     我的网站|搜索
 {% endblock %}
 
 {% block header_extends %}
 <link rel="stylesheet" href="{% static 'blog.css' %}">
+<link rel="stylesheet" href="{% static 'seach.css' %}">
 {% endblock %}
 
 {% block nav_home_active %}active{% endblock %}
@@ -17,15 +18,38 @@
             <div class="col-md-8 col-md-offset-2">
                 {% if search_words == '' %}
                     <h3>你没有搜索任何内容。</h3>
-                    <p>你可以尝试输入点什么东西，例如：科技</p>
+                    <p>你可以尝试输入某些东西，例如：科技</p>
                 {% else %}
-                    <h3>搜索“{{ search_words }}”，找到{{ search_blogs_count }}个结果</h3>
+                    <h3>搜索“{{ search_words }}”找到{{ search_blogs_count }}个结果</h3>
                     <hr>
-                    {% for blog in page_of_blogs %}
-                        <a href="{% url 'article_detail' blog.pk %}">
-                            <h4>{{ blog.title }}</h4>
-                        </a>
-                        <p>{{ blog.content | striptags | truncatechars_html:100}}</p>
+                     {% for blog in page_of_blogs %}
+                        <div class="blog-item">
+                            <div class="blog-title">
+                             <a href="{% url 'article_detail' blog.pk %}" target="_blank">{{ blog.title }}</a>
+                            </div>
+                            <div class="blog_descipt">
+                                {{ blog.content | striptags | truncatechars_html:100}}
+                            </div>
+                            <div class="blog-tags">
+                                <ul>
+                                    <li>
+                                        <span class="glyphicon glyphicon-time"></span>
+                                        <span>{{ blog.created_time|date:"Y-m-d" }}&nbsp;&nbsp;</span>
+                                    </li>
+
+                                    <li>
+                                        阅读({{ blog.get_read_num }})&nbsp;&nbsp;
+                                    </li>
+                                    <li>
+                                        评论({% get_comment_count blog %})&nbsp;&nbsp;
+                                    </li>  
+                                    <li>
+                                        <span class="glyphicon glyphicon-tag"></span>
+                                        <a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     {% empty %}
                         <p>没有找到任何东西，换个关键词试试吧</p>
                     {% endfor %}
@@ -56,18 +80,19 @@
                             {%endfor%}    
                         <li>
                             {%if page_of_blogs.has_next%}
-                                <a href="{% url 'search' %}?wd={{ search_words }}&page={{ page_of_blogs.next_page_number }}" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
+                                <a href="{% url 'search' %}?wd={{ search_words }}&page={{ page_of_blogs.next_page_number }}" inaria-label="Next">
+                                <span aria-hidden="true">&raquo;</span></a>
                             {%else%}
                                 <span aria-hidden="true">&raquo;</span>
                             {%endif%}
                         </li>
                       </ul>
-                      <p>
-                          共有{{ page_of_blogs.paginator.count }}篇博客,
-                          当前第{{page_of_blogs.number}}页，
-                          共{{page_of_blogs.paginator.num_pages}}页
-                      </p>  
+                      
                 </div>
+                    <p>
+                          共有{{ page_of_blogs.paginator.count }}篇博客
+                          当前第{{page_of_blogs.number}}页
+                          共{{page_of_blogs.paginator.num_pages}}页
+                    </p>
     </div>
 {% endblock %}
