--- a/djangotest1/my_notifications/templates/my_notifications/my_notifications.html
+++ b/djangotest1/my_notifications/templates/my_notifications/my_notifications.html
@@ -17,16 +17,23 @@
             <div class="col-md-10 col-md-offset-1">
                 <a class="btn btn-primary" href="{% url 'notifications:mark_all_as_read' %}?next={% url 'my_notifications' %}">全部标记成已读</a>
                 <a class="btn btn-danger" href="{% url 'delete_my_read_notifications' %}">删除已读消息</a>
-                <ul class="notifications">
-                    {% for notification in request.user.notifications.all %}
-                        <li class="{% if not notification.unread %}read{% endif %}">
-                            [{{ notification.timesince }}之前] 
-                            <a href="{% url 'my_notification' notification.pk %}">{{ notification.verb }}</a>
-                        </li>
-                    {% empty %}
+                {% for notification in request.user.notifications.all %}
+                        <div class="blog-item">
+
+                            <div class="blog-title">
+                            
+                            <li class="{% if not notification.unread %}read{% endif %}">    
+                             <span class="glyphicon glyphicon-bell"></span><a href="{% url 'my_notification' notification.pk %}">{{ notification.verb }}</a>
+                             </li>
+                            </div>
+                            <div class="blog_descipt">
+                                {{ notification.timesince }}之前
+                            </div>
+                            
+                        </div>
+                {% empty %}
                         <li>暂无消息</li>
-                    {% endfor %}
-                </ul>
+                {% endfor %}
             </div>
         </div>
     </div>
