--- a/djangotest1/static/blog.css
+++ b/djangotest1/static/blog.css
@@ -49,7 +49,9 @@ div.comment {
     padding-bottom: 0.5em;
 }
 div.reply {
-    margin-left: 2em;
+    border-top: 1px dashed #ccc;
+    
+    margin-left: 2em ;
 }
 div#reply_content_container {
     border: 1px solid #d1d1d1;
@@ -71,4 +73,11 @@ div.like {
 
 div.like .active{
     color: #f22;
+}
+div.panel-heading{
+        font-size: 18px;
+}
+
+li.description{
+    font-size: 16px;
 }
