--- a/djangotest1/templates/base.html
+++ b/djangotest1/templates/base.html
@@ -1,4 +1,4 @@
-    {% load staticfiles %} 
+{% load staticfiles %} 
 {% load notifications_tags %}
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'base.css' %}">
+    
     <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'base.css' %}">
     <script type="text/javascript" src="{% static 'jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'notifications/notify.js' %}"></script>
@@ -30,10 +31,10 @@
             <div id="navbar-collapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="{% block nav_home_active %}{% endblock %}">
-                        <a href="{% url 'home' %}">首页</a>
+                        <a href="{% url 'home' %}"><span class="glyphicon glyphicon-home"></span> 首页 </a>
                     </li>
                     <li class="{% block nav_blog_active %}{% endblock %}">
-                        <a href="{% url 'article_list' %}">博客</a>
+                        <a href="{% url 'article_list' %}"><span class="glyphicon glyphicon-pencil"></span> 博客 </a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right ">
