--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -23,7 +23,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
+            <div class="col-xs-12 col-sm-8 col-md-9">
                 <div class="panel panel-default">
                     <div class="panel-heading">{% block blog_list_title %}博客列表{% endblock %}</div>
                     <div class="panel-body">
@@ -84,13 +84,13 @@
                 </div>
               
             </div>
-            <div class="hidden-xs col-sm-4 col-md-3 col-lg-2">
+            <div class="hidden-xs col-sm-4 col-md-3 ">
                 <div class="panel panel-default">
-                    <div class="panel-heading">博客分类</div>
+                    <div class="panel-heading"><span class="glyphicon glyphicon-book"></span> 博客分类</div>
                     <div class="panel-body">
                         <ul class="blog-types">
                             {% for blog_type in blog_types %}
-                                <li><a href="{% url 'blogs_with_type' blog_type.pk %}">{{ blog_type.type_name }} ({{blog_type.blog_count}})</a></li>
+                                <li class="description"><a href="{% url 'blogs_with_type' blog_type.pk %}">{{ blog_type.type_name }} ({{blog_type.blog_count}})</a></li>
                             {% empty %}
                                 <li>暂无分类</li>
                             {% endfor %}
@@ -98,13 +98,27 @@
                     </div>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading">日期归档</div>
-                    <div class="panel_body">
+                    <div class="panel-heading"><span class="glyphicon glyphicon-book"></span> 日期归档</div>
+                    <div class="panel-body">
                         <ul>
                             {%for blog_date,blog_count in blog_dates.items%}
-                                <li>
+                                <li class="description">
                                     <a href="{% url 'blogs_with_date' blog_date.year blog_date.month %}">
                                     {{blog_date|date:"Y年m月"}} ({{blog_count}})
+                                    </a>
+                                </li>
+                            {%endfor%}
+                        </ul>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading"><span class="glyphicon glyphicon-book"></span> 随机推荐  </div>
+                    <div class="panel-body">
+                        <ul>
+                            {%for blog in rand_blogs%}
+                                <li class="description">
+                                    <a href="{% url 'article_detail' blog.pk%}">
+                                    {{blog.title}}
                                     </a>
                                 </li>
                             {%endfor%}
