个人中心完善及小样式修改

--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading"><span class="glyphicon glyphicon-book"></span> Ëæ»úÍÆ¼ö  </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="randomcommend">
                         <ul>
                             {%for blog in rand_blogs%}
                                 <li class="description">
@@ -128,4 +128,6 @@
             </div>
         </div>
     </div>
+    
 {% endblock %}
+
