--- a/djangotest1/my_notifications/templates/my_notifications/my_notifications.html
+++ b/djangotest1/my_notifications/templates/my_notifications/my_notifications.html
@@ -15,8 +15,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
+
                 <a class="btn btn-primary" href="{% url 'notifications:mark_all_as_read' %}?next={% url 'my_notifications' %}">全部标记成已读</a>
                 <a class="btn btn-danger" href="{% url 'delete_my_read_notifications' %}">删除已读消息</a>
+                <div class="press">
                 {% for notification in request.user.notifications.all %}
                         <div class="blog-item">
 
@@ -34,6 +36,7 @@
                 {% empty %}
                         <li>暂无消息</li>
                 {% endfor %}
+                </div>
             </div>
         </div>
     </div>
