--- a/djangotest1/static/base.css
+++ b/djangotest1/static/base.css
@@ -52,3 +52,4 @@ li.active{
     color: #1a94d0!important;
     background-color: #e7e7e7!important;
 }
+.navbar-default .navbar-nav>li>a:hover{ background-color: #eee;}
