--- a/djangotest1/user/templates/user/user_info.html
+++ b/djangotest1/user/templates/user/user_info.html
@@ -4,63 +4,137 @@
 {% block title %}个人资料{% endblock %}
 {% block nav_home_active %}{% endblock %}
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-10 col-xs-offset-1">
-                {% if user.is_authenticated %}
-                    <h2>{{ user.username }}</h2>
-                    <ul>
-                        <li>昵称：{{ user.get_nickname }} <a href="{% url 'change_nickname' %}?from={{ request.get_full_path }}">修改昵称</a></li>
-                        <li>邮箱：{% if user.email %}{{ user.email }}{% else %}未绑定 <a href="{% url 'bind_email' %}?from={{ request.get_full_path }}">绑定邮箱</a>{% endif %}</li>
-                        <li>上一次登录的时间：{{ user.last_login|date:"Y-m-d H:i:s" }}</li>
-                        <li><a href="{% url 'change_password' %}">修改密码</a></li>
-                    </ul>
-                    {% get_comment_user user as comments %}
-                    <p>你评论了{{comments.commentcount}}次</p>
-                    <p>你收到回复{{comments.replyedcount}}次</p>
-                    <p>你回复{{comments.replycount}}次</p>
-                    <div class="comment-area">
-                    <h3 class="comment-area-title">评论列表</h3>
-                    <div id="comment_list">
-                        
-                        {% for comment in comments.usercomment %}
-                            <div id="root_{{ comment.pk }}" class="comment">
-                                <span>{{ comment.user.get_nickname_or_username }}</span>
-                                <span>({{ comment.comment_time|date:"Y-m-d H:i:s" }})：</span>
-                                <div id="comment_{{ comment.pk }}">
-                                    {{ comment.text|safe }}
-                                </div>
-                              
-                                
-
-                                
-                                {% for reply in comment.root_comment.all %}
-                                    
-                                    <div class="reply">
-                                        <span>{{ reply.user.get_nickname_or_username }}</span>
-                                        <span>({{ reply.comment_time|date:"Y-m-d H:i:s" }})</span>
-                                        <span>回复</span>
-                                        <span>{{ reply.reply_to.get_nickname_or_username }}：</span>
-                                        <div id="comment_{{ reply.pk }}">
-                                            {{ reply.text|safe }}
-                                        </div>
-                                      
-                                    </div>                                    
-                                {% endfor %}
-                                {}
+<div class="container">
+            
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            {% if user.is_authenticated %}
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">个人信息</div>
+                        <div class="panel-body">
+                            <div class="">
+                                <h4 class="user-name">用户名 : {{ user.username }}</h4>
+                                <span> <a href="{% url 'change_nickname' %}?from={{ request.get_full_path }}">修改昵称</a>&nbsp;&nbsp;</span>
+                                <span><a href="{% url 'change_password' %}">修改密码</a></span>
                             </div>
-                        {% empty %}
-                            <span id="no_comment">暂无评论</span>
-                        {% endfor %}
-                    </div>                    
+
+                            <ul class="user-info">
+                                 <li>
+                                    <span>昵称：</span>
+                                    <span>{{ user.get_nickname }}</span>   
+                                </li>
+                                <li>
+                                    <span>绑定邮箱：</span>
+                                    <span>{% if user.email %}{{ user.email }}{% else %}未绑定 <a href="{% url 'bind_email' %}?from={{ request.get_full_path }}">绑定邮箱</a>{% endif %}</span>
+                                </li>
+                                <li>
+                                    <span>上一次登录的时间：</span>
+                                    <span>{{ user.last_login|date:"Y-m-d H:i:s" }}</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                {% else %}
+                {% get_comment_user user as comments %}
+                <div class="col-md-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">用户足迹</div>
+                        <div class="panel-body">
+                            <div class="">
+                                <h4 class="user-name">信息统计</h4>
+                                <span>
+                                    
+                                        
+                                    
+                                </span>
+                            </div>
+
+                            <ul class="user-info">
+                                <li>您共评论了<b>{{comments.commentcount}}</b>次</li>
+                                <li>您共回复了<b>{{comments.replycount}}</b>次</li>
+                                <li>有<b>{{comments.replyedcount}}</b>次，其他人回复了您</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">近期发言<button type="button" class="btn btn-primary btn-xs" id="btn1"  >显示或隐藏近期发言</button></div>
+                        <div class="panel-body" id="yourspeech">
+                            <div class="unread_head">
+                            <ul class="unread_list">
+                                {% for comment in comments.usercomment %}
+                                    <li>
+                                    <a href="{{comment.get_url}}"> <p>{{comment.content_object.title}}</p></a>
+                                    <span>{{ comment.user.get_nickname_or_username }} </span>
+                                    <span>{{ comment.comment_time|date:"Y-m-d H:i:s" }} 评论：{{ comment.text|safe }}</span>
+                                    
+                                    </li>
+                                {% empty %}
+                                <li>暂无评论</li>
+                                {% endfor %}
+                                <li><h3>您回复的</h3></li>
+                                {% for reply in comments.replycomments %}
+                                    <li>
+                                    <a href="{{reply.get_url}}"> <p>{{reply.content_object.title}}</p></a>
+                                    <span>{{ reply.user.get_nickname_or_username }} </span>
+                                    <span>({{ reply.comment_time|date:"Y-m-d H:i:s" }}) </span>
+                                    <span>回复</span>
+                                    <span>{{ reply.reply_to.get_nickname_or_username }}：</span>
+                                    <span>{{ reply.text|safe }}</span>
+                                    </li>
+                                {% empty %}
+                                <li>暂无回复发言</li>
+                                {% endfor %}
+                            </ul>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            {% else %}
                     <span>未登录，跳转到首页...</span>
                     <script type="text/javascript">
                         window.location.href = '/';
                     </script>
-                {% endif %}
-            </div>
+            {% endif %}
         </div>
-    </div>    
+    </div>
+
+    <style type="text/css">
+        .user-info{ margin-top: 1em;}
+        .sp-item{ margin-bottom: 2em; border-bottom: 1px #ccc dashed;}
+        .sp-item li{ text-indent: 1em; padding-bottom: 0.3em;}
+        span{display: inline;}
+        .unread_head{ overflow: hidden;}
+        .panel-heading .btn{ float: right;}
+        
+
+        .unread_list{ margin-top:1em;}
+        .unread_list :hover{ background-color: #eee;}
+
+        .unread_list li{ padding: 1em 1em 0.5em; border-radius: 4px;}
+        .unread_list li:not(:last-child){ border-bottom: 1px #ccc dashed;}
+        .unread_list .unread_descript{ margin: 0.5em 1em 0;}
+    </style>
+
+        </div>
 {% endblock %}
+{%block script_extends%}
+    <script type="text/javascript" ></script>
+    <script type="text/javascript">
+    $("#btn1").click(function(){
+        if($("#yourspeech").is(":hidden")){       
+            $("#yourspeech").show();
+            }
+            else{
+                 $("#yourspeech").hide(); 
+            }
+})
+    </script>
+{%endblock%}
