--- a/djangotest1/templates/base.html
+++ b/djangotest1/templates/base.html
@@ -115,13 +115,13 @@
                          icon: "/static/img/icon/tip.png",  
                          text: "获取公告中..."
                         },
-                alipay: {name:"支付宝", desc: "用支付宝给“仕航”打赏", 
+                alipay: {name:"alipay", desc: "暂无功能", 
                          icon: "/static/img/icon/alipay.png", 
                          qrimg: "/static/img/qr/starbucks.jpg"
                         },
-                weixin: {name:"微信", desc: "用微信给“仕航”打赏", 
+                weixin: {name:"微信", desc: "技术交流询问", 
                          icon: "/static/img/icon/weixin.png",
-                         qrimg: "/static/img/qr/weixin.jpg"
+                         qrimg: "/static/img/qr/local.jpg"
                         }    
             }
         };
